--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ click==8.1.3
 fastapi==0.85.0
 h11==0.13.0
 idna==3.4
-git+https://github.com/nzottmann/postcardscanner-python.git@1.2.0
+git+https://github.com/nzottmann/postcardscanner-python.git@1.3.0
 pydantic==1.10.2
 RPi.GPIO==0.7.1
 rpimotorlib==3.1
@@ -11,3 +11,5 @@ sniffio==1.3.0
 starlette==0.20.4
 typing-extensions==4.3.0
 uvicorn==0.18.3
+Pillow==10.0.0
+pyzbar==0.1.9
